# introduction-to-conda

./: .gitignore  README.md  _config.yml  index.md
docs/: README.md  _config.yml  advance-env-yml.md  advanced.md  build-a-conda-package.md  cheatsheet.md  creating-a-python-package.md  environments.md  index.md  installing-packages.md  mamba.md  what-is-conda.md
docs/creating-a-package/: creating-a-conda-package.md  creating-a-python-package.md  index.md
docs/figures/: environments.pages
intro2conda/: README.md  meta.yaml  setup.cfg
python-package/: environment.yml  setup.cfg  setup.py
python-package/src/intro2conda/: print.py
