[metadata]
# replace with your username:
name = intro2conda
version = 0.0.1
author = Lucas Sawade
author_email = lsawade@princeton.edu
description = Mini example package
long_description = file: README.md
long_description_content_type = text/markdown
maintainer_email = lsawade@princeton.edu
url = https://github.com/lsawade/introduction-to-conda
project_urls =
    Documentation = https://github.com/lsawade/introduction-to-conda
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
keywords = Education

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.8
install_requires =  
tests_require = pytest
zip_safe = False

[options.packages.find]
where = src

